# archbox

./: .coverage  .gitignore  .mutmut-cache  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.hypothesis/constants/: 031fe350771aff11  03cf2cc2f8a41500  05d366bdc1c0f52a  07a1cd873bc71352  0a47258e7059b79f  0e7d5dabcffcb398  0f568373911f137f  11baf9b17df90805  124fe191df0f6a42  128e4b81ecba3d5e  167a94ee646ae915  19ccc0c4dc2be05b  1ad9ccb553fc3941  1c52059c29a4f55c  1cb75f56b4ddac4b  1ed9692b4afc9e5a  20136f5f3a82fc8f  2117684acab3db71  2274374a49d06c39  22c04f56a74e8e18  24752d4233ffba81  26dc549a2b079bdc  2810cdfd22c933c4  2bcd464f133b4918  2c094e8d15a3c33c  2c4d34516e5060d8  2ee37518841d7283  2eedc9e139446658  30ac2f1bc8d63e3f  30ce799f53961fd0  34902146b4c208b3  366bc82aade19b2b  368bbf353da7fc80  38bfc542ac1cea89  3c96306b50727d92  3cda01b65ee3883a  3d789afd33e8db24  3dbe33245fa4891e  416042323cbc0865  430f806a4bf17768  (+117 more)
archbox/: __init__.py  __version__.py  _logging.py
archbox/cli/: __init__.py  backtest.py  estimate.py  main.py  regime.py  risk.py
archbox/core/: __init__.py  config.py  exceptions.py  results.py  results.py.bak  volatility_model.py
archbox/datasets/: __init__.py  generate_datasets.py  load.py
archbox/diagnostics/: __init__.py  arch_lm.py  diagnostics.py  engle_sheppard.py  hong_spillover.py  ljung_box.py  nyblom.py  sign_bias.py
archbox/distributions/: __init__.py  base.py  ged.py  mixture_normal.py  normal.py  skewed_t.py  student_t.py
archbox/estimation/: __init__.py  mle.py
archbox/experiment/: __init__.py  comparison.py  experiment.py  risk_analysis.py  validation.py
archbox/models/: __init__.py  aparch.py  component_garch.py  egarch.py  figarch.py  garch.py  garch_m.py  gjr_garch.py  har_rv.py  igarch.py
archbox/multivariate/: __init__.py  base.py  bekk.py  ccc.py  dcc.py  deco.py  gogarch.py  portfolio.py  results.py  utils.py
archbox/regime/: __init__.py  base.py  em.py  hamilton_filter.py  kim_smoother.py  ms_ar.py  ms_garch.py  ms_mean.py  ms_var.py  results.py
archbox/report/: __init__.py  css_manager.py  report_manager.py  template_manager.py
archbox/risk/: __init__.py  backtest.py  (+3 more)
docs/: index.md
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py
(+544 files in other folders)
