[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archbox"
dynamic = ["version"]
description = "ARCH/GARCH volatility models for financial time series"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "NodesEcon" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
archbox = "archbox.cli.main:main"

[tool.hatch.version]
path = "archbox/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["archbox"]
omit = [
    "archbox/datasets/generate_datasets.py",
    "archbox/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["N806", "N802"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N806"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportConstantRedefinition = false
reportPossiblyUnboundVariable = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportUntypedFunctionDecorator = false
reportMissingTypeArgument = false
reportMissingImports = false
reportUnnecessaryIsInstance = false
reportUnusedVariable = false
